2011-08-31  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Device.pl: Fix number of skipped test for S3.

2011-08-31  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Print why a disk is skip if DS_NOINC.

2011-08-30  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Device.pl: Check invalid location on s3 device.

2011-08-30  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c (s3_is_bucket_exists): Do not retry if bucket do
	  not exists.

2011-08-30  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c (s3_is_bucket_exists): New function to check if a
	  bucket exists.
	* device-src/s3.h (s3_is_bucket_exists): Prototype.
	* device-src/s3-device.c: Call s3_is_bucket_exists before
	  s3_make_bucket.

2011-08-29  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/multi.pm: Keep the device_error in the state file.
	* perl/Amanda/Changer/robot.pm: Keep the device_error in the state file.
	* server-src/amtape.pl (inventory): Print inventory device error.
	* installcheck/Amanda_Changer_multi.pl,
	  installcheck/Amanda_Changer_ndmp.pl,
	  installcheck/Amanda_Changer_robot.pl: Fix for device_error in
	  state file.

2011-08-29  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Fix warning.

2011-08-29  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Changer_ndmp.pl,
	  installcheck/Amanda_Changer_robot.pl: Fix for previous patch.

2011-08-29  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: return a reservation even on error.

2011-08-29  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Gunar Gunnarsson
	* server-src/amvault.pl: Cast $dump->{'kb'} to int.

2011-08-24  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: Update S3 location url.

2011-08-24  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/match.c: Fix for 'Trailing backslash' error